Add meet the team section with images

--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -32,6 +32,9 @@
             <div class="collapse navbar-collapse justify-content-between text-white" id="navbarNavDropdown">
                 <ul class="navbar-nav ms-4">
                     <li class="nav-item">
+                        <a class="nav-link text-white" aria-current="page" href="{% url 'home-page' %}">Home</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link text-white" aria-current="page" href="{% url 'about-page' %}">About</a>
                     </li>
                     <li class="nav-item">
