Add testimonials and location sections

--- a/core/templates/core/home.html
+++ b/core/templates/core/home.html
@@ -167,4 +167,139 @@
     </div>
 </section>
 <!--End-->
+
+<!--Testimonials-->
+
+<section>
+    <h2 class="text-center text-white mt-3">Testimonials</h2>
+    <hr class="text-white">
+    <div class="container-fluid my-3">
+        <div class="row">
+            <div class="col-12">
+                <div class="list-group me-5">
+                    <ul>
+                        <li class="list-group-item bg-dark text-white border-3">
+                            <p>
+                                <i class="fa-sharp fa-solid fa-star fa-beat fa-2xs" style="color: #fff700;"></i>
+                                <i class="fa-sharp fa-solid fa-star fa-beat fa-2xs" style="color: #fff700;"></i>
+                                <i class="fa-sharp fa-solid fa-star fa-beat fa-2xs" style="color: #fff700;"></i>
+                                <i class="fa-sharp fa-solid fa-star fa-beat fa-2xs" style="color: #fff700;"></i>
+                                <i class="fa-sharp fa-solid fa-star-half fa-beat-fade fa-2xs"
+                                    style="color: #fbff00;"></i>
+                            </p>
+                            <p><i class="fa-solid fa-quote-left"></i> I've been going to this
+                                barbershop for years,
+                                and I can confidently say it's the best
+                                in
+                                town. The barbers are skilled, friendly, and always give me the
+                                perfect haircut. The
+                                atmosphere is welcoming, and the attention to detail is outstanding.
+                                I wouldn't
+                                trust
+                                anyone else with my hair. <i class="fa-solid fa-quote-right"></i>
+                            </p>
+                            <small class="fw-light">Review by - John D</small>
+                        </li>
+                        <li class="list-group-item bg-dark text-white border-3">
+                            <p>
+                                <i class="fa-sharp fa-solid fa-star fa-beat fa-2xs"></i>
+                                <i class="fa-sharp fa-solid fa-star fa-beat fa-2xs"></i>
+                                <i class="fa-sharp fa-solid fa-star fa-beat fa-2xs"></i>
+                                <i class="fa-sharp fa-solid fa-star fa-beat fa-2xs"></i>
+                                <i class="fa-sharp fa-solid fa-star fa-beat fa-2xs"></i>
+                            </p>
+
+                            <p><i class="fa-solid fa-quote-left"></i> I have been bringing my whole
+                                family to this
+                                barbershop for years, and we are never
+                                disappointed. The staff is excellent with kids and adults alike.
+                                They are patient,
+                                skilled, and create a comfortable environment for everyone. We love
+                                the quality of
+                                service and the friendly atmosphere. This is definitely the go-to
+                                barbershop in
+                                town! <i class="fa-solid fa-quote-right"></i>
+                            </p>
+                            <small class="fw-light">Review by - Mark T</small>
+                        </li>
+                        <li class="list-group-item bg-dark text-white border-3">
+                            <p>
+                                <i class="fa-sharp fa-solid fa-star fa-beat fa-2xs"></i>
+                                <i class="fa-sharp fa-solid fa-star fa-beat fa-2xs"></i>
+                                <i class="fa-sharp fa-solid fa-star fa-beat fa-2xs"></i>
+                                <i class="fa-sharp fa-solid fa-star fa-beat fa-2xs"></i>
+                            </p>
+                            <p><i class="fa-solid fa-quote-left"></i> I highly recommend this
+                                barbershop to anyone
+                                looking for a top-notch grooming
+                                experience.
+                                The barbers are true professionals who stay up to date with the
+                                latest trends and
+                                techniques. They offer valuable suggestions and pay close attention
+                                to every detail.
+                                From the moment you step in, you can expect excellent customer
+                                service and leave
+                                with a
+                                fresh look you'll love.
+                                <i class="fa-solid fa-quote-right"></i>
+                            </p>
+                            <small class="fw-light">Review by - David M</small>
+                        </li>
+                        <li class="list-group-item bg-dark text-white border-3">
+                            <p>
+                                <i class="fa-sharp fa-solid fa-star fa-beat fa-2xs"></i>
+                                <i class="fa-sharp fa-solid fa-star fa-beat fa-2xs"></i>
+                                <i class="fa-sharp fa-solid fa-star fa-beat fa-2xs"></i>
+                                <i class="fa-sharp fa-solid fa-star fa-beat fa-2xs"></i>
+                                <i class="fa-sharp fa-solid fa-star fa-beat fa-2xs"></i>
+                            </p>
+                            <p><i class="fa-solid fa-quote-left"></i> Having tried various
+                                barbershops in Ennis, I
+                                can confidently say that this barbershop
+                                is
+                                the best in town. The moment you step through the door, you're
+                                greeted with a
+                                friendly
+                                atmosphere and a team of highly skilled barbers. They take the time
+                                to understand
+                                your
+                                preferences and deliver exceptional haircuts every time. The
+                                attention to detail and
+                                their commitment to customer satisfaction is truly unmatched. If
+                                you're looking for
+                                a
+                                barbershop that exceeds expectations, look no further. This is the
+                                place to go. <i class="fa-solid fa-quote-right"></i>
+                            </p>
+                            <small class="fw-light">Review by - Michael R</small>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="reviews-btn">
+        <button type="button" class="btn btn-success mb-4">Read more</button>
+    </div>
+</section>
+
+<!--Location-->
+<section>
+    <div class="container-fluid mb-5">
+        <div class="row bg-dark">
+            <div class="col-lg-12">
+                <h2 class="text-white text-center my-4 ms-5"><i class="fa-solid fa-location-dot"></i>
+                    Location</h2>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-lg-12">
+                <iframe title="Location of the barbershop"
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1204.8882500865961!2d-8.983939360802736!3d52.84441221304227!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x485b6d2d159a8405%3A0x462ed348b097865b!2sThe%20Height!5e0!3m2!1sen!2sie!4v1685393596646!5m2!1sen!2sie"
+                    width="100%" height="300px" allowfullscreen="" loading="lazy"
+                    referrerpolicy="no-referrer-when-downgrade"></iframe>
+            </div>
+        </div>
+    </div>
+</section>
 {% endblock content %}
