--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -64,7 +64,39 @@
         </div>
     </nav>
 
+
+
+
     {% block content %}{% endblock %}
+    <!--Footer-->
+    <!--Contact details and opening times-->
+    <footer>
+        <div class="container-fluid align-content-center">
+            <div class="row bg-dark">
+                <div class="col-lg-3 my-4">
+                    <h2 class="text-white my-4 ms-5 text-start">Address</h2>
+                    <p class="text-white text-start ms-5">Inked Clippers</p>
+                    <p class="text-white text-start ms-5">47 The Height</p>
+                    <p class="text-white text-start ms-5">Ennis, Co. Clare</p>
+                    <p class="text-white text-start ms-5">Ireland</p>
+                </div>
+                <div class="col-lg-6 text-center">
+                    <h2 class="text-white my-4 text-center">Opening Times</h2>
+                    <p class="text-white"><span class="fw-bold">Monday - Friday: </span>09:00-20:00</p>
+                    <p class="text-white"><span class="fw-bold">Saturday: </span>09:00-18:00</p>
+                    <p class="text-white"><span class="fw-bold">Sunday: </span> Closed</p>
+                </div>
+                <div class="col-lg-3 my-4">
+                    <h2 class="text-white my-4 me-4 text-end"><i class="fa-solid fa-phone"></i> Phone
+                        &amp; Email <i class="fa-solid fa-envelope"></i></h2>
+                    <p class="text-white text-end me-5"><span class="fw-bold">Tel: </span><a
+                            href="tel:085-123-000">0851230000</a></p>
+                    <p class="text-white text-end me-3"><span class="fw-bold">Email:
+                        </span><a href="mailto: InkedClipers@gmail.com">InkedClippers@gmail.com</a></p>
+                </div>
+            </div>
+        </div>
+    </footer>
 
     <!--Scripts for bootstrap-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
