--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -38,7 +38,7 @@
                         <a class="nav-link text-white" aria-current="page" href="{% url 'about-page' %}">About</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-white" aria-current="page" href="">Barbers</a>
+                        <a class="nav-link text-white" aria-current="page" href="{% url 'barbers-page' %}">Barbers</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link text-white" href="">Tattoo</a>
