Created model for testimonials

--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -75,10 +75,10 @@
             <div class="row bg-dark">
                 <div class="col-lg-3 my-4">
                     <h2 class="text-white my-4 ms-5 text-start">Address</h2>
-                    <p class="text-white text-start ms-5">Inked Clippers</p>
-                    <p class="text-white text-start ms-5">47 The Height</p>
-                    <p class="text-white text-start ms-5">Ennis, Co. Clare</p>
-                    <p class="text-white text-start ms-5">Ireland</p>
+                    <p class="text-white text-start ms-5 fw-bold">Inked Clippers</p>
+                    <p class="text-white text-start ms-5 fw-bold">47 The Height</p>
+                    <p class="text-white text-start ms-5 fw-bold">Ennis, Co. Clare</p>
+                    <p class="text-white text-start ms-5 fw-bold">Ireland</p>
                 </div>
                 <div class="col-lg-6 text-center">
                     <h2 class="text-white my-4 text-center">Opening Times</h2>
