--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -66,7 +66,13 @@
 
 
 
-
+    {% if messages %}
+    {% for message in messages %}
+    <div class="alert alert-{{ message.tags }}">
+        {{ message }}
+    </div>
+    {% endfor %}
+    {% endif %}
     {% block content %}{% endblock %}
     <!--Footer-->
     <!--Contact details and opening times-->
