--- a/core/static/core/main.css
+++ b/core/static/core/main.css
@@ -10,6 +10,10 @@ a {
     text-decoration: none;
 }
 
+* {
+    list-style: none;
+}
+
 /*----------------------------------------------------------------------- Landing page img */
 .image-container {
     height: 100dvh;
@@ -73,4 +77,10 @@ body {
     color: white;
     height: 100%;
     width: 100%;
+}
+
+/* --------------------------------------------------------------------------------Register page */
+
+.asteriskField {
+    display: none;
 }
