--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -10,9 +10,11 @@
         content="Barbershop, Tattoo Parlor, Inked Clipers, haircut, Tattoo, Fade, Ennis, Code Institute, Django, Bootstrap, Dylan Mc Mahon">
     <meta name="author" content="Dylan Mc Mahon">
     <title>Inked Clippers Barbershop &amp; Tattoo Parlor</title>
+    <!--Bootstrap 5 CDN link-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="{% static 'core/main.css' %}">
+    <!--script for fontawesome-->
     <script src="https://kit.fontawesome.com/aed26dd8dc.js" crossorigin="anonymous"></script>
 </head>
 
@@ -31,6 +33,21 @@
             <!--Nav links-->
             <div class="collapse navbar-collapse justify-content-between text-white" id="navbarNavDropdown">
                 <ul class="navbar-nav ms-4">
+                    <!--If statement to only show certain nav links depending on logged in status-->
+                    {% if user.is_authenticated %}
+                    <li class="nav-item">
+                        <a class="nav-link text-white" aria-current="page" href="{% url 'home-page' %}">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-white" aria-current="page" href="{% url 'barbers-page' %}">Barbers</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-white" href="">Tattoo</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-white" href="">Products</a>
+                    </li>
+                    {% else %}
                     <li class="nav-item">
                         <a class="nav-link text-white" aria-current="page" href="{% url 'home-page' %}">Home</a>
                     </li>
@@ -46,18 +63,35 @@
                     <li class="nav-item">
                         <a class="nav-link text-white" href="">Products</a>
                     </li>
+                    {% endif %}
                 </ul>
                 <ul class="navbar-nav justify-content-end">
+                    {% if user.is_authenticated %}
+                    <!--If statement to only show certain nav links depending on logged in status-->
                     <li class="nav-item">
-                        <a class="nav-link d-none d-md-inline text-white justify-content-end" href="">Register</a>
+                        <a class="nav-link d-none d-md-inline text-white" href="{% url 'profile-page' %}">Profile</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link d-none d-md-inline text-white" href="">Login</a>
+                        <a class="nav-link d-none d-md-inline text-white" href="{% url 'logout-page' %}">Logout</a>
+                    </li>
+                    <button type="button" class="d-md-none bg-black text-white"><a
+                            href="{% url 'profile-page' %}">profile</a></button>
+                    <button type="button" class="d-md-none bg-black text-white"><a
+                            href="{% url 'logout-page' %}">Logout</a></button>
+                    {% else %}
+                    <li class="nav-item">
+                        <a class="nav-link d-none d-md-inline text-white justify-content-end"
+                            href="{% url 'register-page' %}">Register</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link d-none d-md-inline text-white" href="{% url 'login-page' %}">Login</a>
                     </li>
                     <div class="nav-btns">
-                        <button type="button"
-                            class="d-md-none bg-black text-white justify-content-center">Register</button>
-                        <button type="button" class="d-md-none bg-black text-white">Login</button>
+                        <button type="button" class="d-md-none bg-black text-white justify-content-center"><a
+                                href="{% url 'register-page' %}">Register</a></button>
+                        <button type="button" class="d-md-none bg-black text-white"><a
+                                href="{% url 'login-page' %}">Login</a></button>
+                        {% endif %}
                     </div>
                 </ul>
             </div>
@@ -65,7 +99,7 @@
     </nav>
 
 
-
+    <!--If statement & for loop to display messages-->
     {% if messages %}
     {% for message in messages %}
     <div class="alert alert-{{ message.tags }}">
@@ -74,7 +108,6 @@
     {% endfor %}
     {% endif %}
     {% block content %}{% endblock %}
-    <!--Footer-->
     <!--Contact details and opening times-->
     <footer>
         <div class="container-fluid align-content-center">
