Set up Cloudinary & add a div for styling barbers.html

--- a/core/templates/core/barbers.html
+++ b/core/templates/core/barbers.html
@@ -5,7 +5,7 @@
 <section class="container my-5">
     <table class="table-borderless table-services text-center">
         <thead>
-            <tr>
+            <tr id="barber-service">
                 <th scope="col">HAIR &amp; SHAVE</th>
                 <th scope="col">PRICES</th>
                 <th scope="col">MEMBERSHIP DISCOUNTS</th>
